[package]
name = "async-consul"
version = "0.1.0-alpha.1"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "An Tokio-based Consul client for Rust."
keywords = ["consul", "async", "tokio"]

[dependencies]
tracing = "0.1"
futures = "0.3"
tokio = "0.2"
async-stream = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"